<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    >


    <EditText
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:hint="First Name"
        android:ems="10"
        android:id="@+id/firstName"
        android:layout_alignParentTop="true"
        android:layout_alignLeft="@+id/password"
        android:layout_alignStart="@+id/password"
        android:layout_marginTop="18dp" />

    <EditText
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:hint="Last Name"
        android:ems="10"
        android:id="@+id/lastName"
        android:layout_below="@+id/firstName"
        android:layout_alignLeft="@+id/email"
        android:layout_alignStart="@+id/email"
        android:layout_marginTop="50dp" />

    <EditText
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:hint="Email"
        android:ems="10"
        android:id="@+id/email"
        android:layout_below="@+id/lastName"
        android:layout_alignLeft="@+id/firstName"
        android:layout_alignStart="@+id/firstName"
        android:layout_marginTop="50dp" />

    <EditText
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:inputType="textPassword|text"
        android:ems="10"
        android:id="@+id/password"
        android:hint="Password"
        android:layout_marginTop="49dp"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/email" />

    <EditText
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:inputType="textPassword|text"
        android:ems="10"
        android:id="@+id/confirmPassword"
        android:hint="Confirm Password"
        android:layout_marginTop="50dp"
        android:layout_below="@+id/password"
        android:layout_alignLeft="@+id/password"
        android:layout_alignStart="@+id/password"
        android:password="false"
        android:maxLength="15" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Create"
        android:id="@+id/create"
        android:layout_marginTop="50dp"
        android:onClick="createClicked"
        android:nestedScrollingEnabled="false"
        android:layout_below="@+id/confirmPassword"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="Login?"
        android:id="@+id/switchToLoginLink"
        android:layout_alignParentBottom="false"
        android:layout_centerHorizontal="true"
        android:onClick="loginLinkClicked"
        android:textColor="#3ea1e8"
        android:layout_below="@+id/create" />

</RelativeLayout>