<resources>
    <string name="app_name">FashionApp</string>
    <string name="failed_create_account_toast">Could not create account. :(</string>
    <string name="success_create_account_toast">Account Created</string>
    <string name="incomplete_info_toast">Incomplete Information</string>
    <string name="failed_login_toast">Could not Log on :(</string>
    <string name="SERVER_URL">http://ec2-52-33-232-213.us-west-2.compute.amazonaws.com:3000</string>
</resources>
