<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent">

    <EditText
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:id="@+id/loginEmail"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="165dp"
        android:hint="email" />

    <EditText
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/loginPassword"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:hint="password"
        />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Login"
        android:id="@+id/loginButton"
        android:onClick="loginClicked"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/loginPassword"
        android:layout_marginTop="75dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="Create Account?"
        android:id="@+id/createAccountLink"
        android:layout_alignParentBottom="false"
        android:layout_centerHorizontal="true"
        android:onClick="createLinkClicked"
        android:textColor="#3ea1e8"
        android:layout_below="@+id/loginButton" />
</RelativeLayout>